# GradDesgn-QQBot

./: README.md  bot.py  pyproject.toml  requirements.txt
src/plugins/: daily.py
src/plugins/DailyReport/: __init__.py  data_source.py  report.py
src/plugins/first_plugin/: __init__.py
